syntax = "proto3";

package cosmos.auth.v1beta1;

message BaseAccount {
  string address = 1;

  message PubKey {
    string type_url = 1;
    bytes value = 2;
  }

  PubKey pub_key = 2;
  uint64 account_number = 3;
  uint64 sequence = 4;
}